--- a/ConsoleApp4/ConsoleApp4.csproj
+++ b/ConsoleApp4/ConsoleApp4.csproj
@@ -10,6 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+		<PackageReference Include="MintPlayer.CliGenerator" Version="10.8.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+		<PackageReference Include="MintPlayer.CliGenerator.Attributes" Version="10.8.0" GeneratePathProperty="true" />
 		<PackageReference Include="System.CommandLine" Version="2.0.0" />
 	</ItemGroup>
 
