--- a/ConsoleApp4/ConsoleApp4.csproj
+++ b/ConsoleApp4/ConsoleApp4.csproj
@@ -13,6 +13,8 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
 		<PackageReference Include="MintPlayer.CliGenerator" Version="10.8.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
 		<PackageReference Include="MintPlayer.CliGenerator.Attributes" Version="10.8.0" GeneratePathProperty="true" />
+		<PackageReference Include="MintPlayer.SourceGenerators" Version="10.7.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+		<PackageReference Include="MintPlayer.SourceGenerators.Attributes" Version="10.7.0" GeneratePathProperty="true" />
 		<PackageReference Include="System.CommandLine" Version="2.0.0" />
 	</ItemGroup>
 
